# expectorate

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: basic.rs  lyrics.txt
src/: feature_predicates.rs  lib.rs
tests/: data_a.txt  data_a2.txt  data_b.txt  test_basic.rs
