[package]
name = "expectorate"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Library for comparing output to file contents with simple updating"
repository = "https://github.com/oxidecomputer/expectorate"
readme = "README.md"
keywords = ["test", "fixture"]
categories = ["development-tools::testing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
predicates = ["dep:predicates"]

[dependencies]
console = "0.15.7"
newline-converter = "0.3.0"
predicates = { version = "3.0.4", optional = true }
similar = "2.3.0"
